Fix image width overlap issue in individual and group selection screens

--- a/css/spni.css
+++ b/css/spni.css
@@ -1097,6 +1097,15 @@ body.modal-open {
 	right: 25%;
 }
 
+.selection-image-area .opponent-image {
+	pointer-events: none;
+	position: absolute;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+
 .opponent-suggestion-container {
 	position: absolute;
 	width: 100%;
@@ -1241,15 +1250,15 @@ body.modal-open {
 
 .badge-icon {
     position: absolute;
-    width: 18%;
-    left: 24.5%;
-    top: 0%;
+    width: 36%;
+    left: 0;
+    top: 0;
 }
 
 .layer-icon {
     position: absolute;
-    width: 10%;
-    right: 26.5%;
+    width: 20%;
+    right: 0;
     top: 2%;
 }
 
